fix the header images being stretched close #51

--- a/sites/all/themes/energipr/sass/_block.scss
+++ b/sites/all/themes/energipr/sass/_block.scss
@@ -435,3 +435,17 @@
 	margin: 0 auto;
 	padding: 50px 10px;
 }
+
+
+.bean-header-image
+{
+  font-size: 0;
+  position: absolute;
+  top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+}
