--- a/sites/all/themes/energipr/sass/_main.scss
+++ b/sites/all/themes/energipr/sass/_main.scss
@@ -712,30 +712,6 @@ body.down #navigation.animateIt {
 	}
 }
 
-.block--header-image
-{
-  font-size: 0;
-  position: absolute;
-  width: 200%;
-  height: 200%;
-  left: -50%;
-  top: -50%;
-  z-index: -1;
-  
-  img
-  {
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0; 
-    margin: auto; 
-    min-width: 50%;
-    min-height: 50%;
-    overflow-x: hidden;
-  }
-}
-
 
 #page-title
 {
